--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -22,22 +22,26 @@ jobs:
             name: "Windows Latest MSVC", artifact: "Windows-MSVC.7z",
             os: windows-latest,
             cc: "cl", cxx: "cl",
-            environment_script: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+            environment_script: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
+            build_type: "Release"
           }
         - {
             name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
             os: windows-latest,
-            cc: "gcc", cxx: "g++"
+            cc: "gcc", cxx: "g++",
+            build_type: "Release"
           }
         - {
             name: "Ubuntu Latest GCC", artifact: "Linux.7z",
             os: ubuntu-latest,
-            cc: "gcc", cxx: "g++"
+            cc: "gcc", cxx: "g++",
+            build_type: "Release"
           }
         - {
             name: "macOS Latest Clang", artifact: "macOS.7z",
             os: macos-latest,
-            cc: "clang", cxx: "clang++"
+            cc: "clang", cxx: "clang++",
+            build_type: "Release"
           }
 
     steps:
@@ -81,6 +85,7 @@ jobs:
             COMMAND chmod +x ${cmake_dir}/cmake
           )
         endif()
+    
     - name: Download ccache
       id: ccache
       shell: cmake -P {0}
@@ -88,12 +93,14 @@ jobs:
         set(ccache_url "https://github.com/cristianadam/ccache/releases/download/v$ENV{CCACHE_VERSION}/${{ runner.os }}.tar.xz")
         file(DOWNLOAD "${ccache_url}" ./ccache.tar.xz SHOW_PROGRESS)
         execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ./ccache.tar.xz)
+    
     - name: Prepare ccache timestamp
       id: ccache_cache_timestamp
       shell: cmake -P {0}
       run: |
         string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
         file(APPEND "$ENV{GITHUB_OUTPUT}" "timestamp=${current_date}")
+    
     - name: ccache cache files
       uses: actions/cache@v3
       with:
@@ -101,6 +108,7 @@ jobs:
         key: ${{ matrix.config.name }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
         restore-keys: |
           ${{ matrix.config.name }}-ccache-
+    
     - name: build with cmake
       uses: lukka/run-cmake@v3
       with:
@@ -110,11 +118,6 @@ jobs:
         buildWithCMake: true
         buildDirectory: '${{ github.workspace }}/build'
         cmakeBuildType: ${{ matrix.config.build_type }}
-        
-    - name: post build directories
-      shell: cmd
-      run:
-        tree /f /a
 
     - name: ccache statistics
       shell: cmake -P {0}
@@ -123,6 +126,7 @@ jobs:
         set(ENV{CCACHE_BASEDIR} "${ccache_basedir}")
         set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
         execute_process(COMMAND ccache -s)
+    
     - name: Run tests
       shell: cmake -P {0}
       run: |
@@ -143,6 +147,7 @@ jobs:
           message("::error::${test_results}")
           message(FATAL_ERROR "Running tests failed!")
         endif()
+    
     - name: Install Strip
       run: cmake --install build --prefix instdir --strip
 
