--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -132,7 +132,6 @@ jobs:
               -S .
               -B build
               -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
-              -G Ninja
               -D CMAKE_C_COMPILER_LAUNCHER=ccache
               -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
             RESULT_VARIABLE result
@@ -218,7 +217,7 @@ jobs:
           message(FATAL_ERROR "Running tests failed!")
         endif()
     - name: Install Strip
-      run: cmake --install build --prefix instdir --strip
+      run: cmake --install build --target install --config "Release" --prefix instdir --strip
 
 
     - name: Pack
