--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -217,8 +217,7 @@ jobs:
           message(FATAL_ERROR "Running tests failed!")
         endif()
     - name: Install Strip
-      run: cmake --install build --target install --config "Release" --prefix instdir --strip
-
+      run: cmake --install build --container install --config "Release" --prefix instdir --strip
 
     - name: Pack
       working-directory: instdir
