Updated cmake file for array.test
Added boilerplate code for testing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,8 +9,19 @@ project(
   LANGUAGES CXX
 )
 
+option(TEST_ALL "toggle option to execute all unit tests from all test suites" OFF)
+option(TEST_ARRAY "toggle option to execute array container test cases" OFF)
+option(TEST_DARRAY "toggle option to execute darray container test cases" OFF)
 
-add_subdirectory(container/darray.test)
+
+if(TEST_ALL)
+  add_subdirectory(container/array.test)
+  add_subdirectory(container/darray.test)
+elseif(TEST_ARRAY)
+  add_subdirectory(container/array.test)
+elseif(TEST_DARRAY)
+  add_subdirectory(container/darray.test)
+endif()
 
 
 verbose_message("Finished adding unit tests for ${CMAKE_PROJECT_NAME}.")
