--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -138,6 +138,7 @@ jobs:
               -D CMAKE_MAKE_PROGRAM=ninja
               -D CMAKE_C_COMPILER_LAUNCHER=ccache
               -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
+              -D TEST_ALL=ON
             RESULT_VARIABLE result
           )
         
