--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -32,4 +32,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # path to index!
-          publish_dir: docs/build/html/zxx_core_container
+          publish_dir: docs/build/html
