Fixed steps' id

--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -13,23 +13,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        id: install-dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
-          pip install sphinx sphinx-rtd-theme breathe myst_parser breathe sphinx_design pydata-sphinx-theme
-      
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
-          path: ${{ steps.install-dependencies.outputs.path }}
-          key: ${{ runner.os }}-dependencies-${{ hashFiles('**/requirements.txt') }}
+          path: ${{ steps.${{ runner.os }}-install-dependencies.outputs.path }}
+          key: ${{ runner.os }}-install-dependencies-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-dependencies-  
+            ${{ runner.os }}-install-dependencies-  
       
+      - name: Install dependencies
+        id: ${{ runner.os }}-install-dependencies
+          sudo apt-get update
+        run: |
+          sudo apt-get install -y doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
+          pip install sphinx sphinx-rtd-theme breathe myst_parser breathe sphinx_design pydata-sphinx-theme
+      
+      - name: Cache documentation
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.build-docs.outputs.path }}
+          key: ${{ runner.os }}-build-docs-${{ hashFiles('docs/**/*') }}
+          restore-keys: |
+            ${{ runner.os }}-build-docs-
+
       - name: Build documentation
-        id: build-docs
+        id: ${{ runner.os }}-build-docs
         run: | 
           echo "Generate doxygen xml for breathe to understand the source code"
           doxygen Doxyfile
@@ -37,13 +45,6 @@ jobs:
           cd docs
           make html
 
-      - name: Cache documentation
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.build-docs.outputs.path }}
-          key: ${{ runner.os }}-docs-${{ hashFiles('docs/**/*') }}
-          restore-keys: |
-            ${{ runner.os }}-docs-
 
       - name: Deploy documentation
         uses: peaceiris/actions-gh-pages@v3
