--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -1,4 +1,4 @@
-name: Build Documentation
+name: Build Docs
 
 on:
   workflow_run:
@@ -15,8 +15,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - name: Restore doxygen binary
+        id: restore-doxygen
+        uses: actions/cache@v3
+        if: steps.extract-doxygen.outputs.cache-hit != 'true'
+        with:
+          path: ${{ env.HOME }}/doxygen
+          key: doxygen-v1.9.2-${{ hashFiles('${HOME}/doxygen/**') }}
+      
+      - name: Extract doxygen
+        id: extract-doxygen
+        run: |
+          wget https://www.doxygen.nl/files/doxygen-1.9.6.linux.bin.tar.gz -O doxygen.tar.gz
+          tar xzf doxygen.tar.gz
+          mv doxygen-1.9.2/bin doxygen
+          export PATH=${{ env.HOME }}/doxygen:$PATH
+        env:
+          DOXYGEN_CACHE_DIR: ${{ steps.restore-doxygen.outputs.cache-dir }}
+
+      - name: Restore sphinx dependencies
+        uses: actions/cache@v3
         with:
           path: ${{ steps.install-dependencies.outputs.path }}
           key: install-dependencies-${{ hashFiles('**/requirements.txt') }}
@@ -27,11 +45,10 @@ jobs:
         id: install-dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
           pip install sphinx sphinx-rtd-theme breathe myst_parser breathe sphinx_design pydata-sphinx-theme
       
       - name: Cache documentation
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ steps.build-docs.outputs.path }}
           key: build-docs-${{ hashFiles('docs/**/*') }}
@@ -40,6 +57,8 @@ jobs:
 
       - name: Build documentation
         id: build-docs
+        outputs:
+          path: 'docs'
         run: | 
           echo "Generate doxygen xml for breathe to understand the source code"
           doxygen Doxyfile
