--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -29,7 +29,7 @@ jobs:
           wget https://www.doxygen.nl/files/doxygen-1.9.6.linux.bin.tar.gz -O doxygen.tar.gz
           tar xzf doxygen.tar.gz
           mv doxygen-1.9.6/bin doxygen
-          export PATH=${{ GITHUB_WORKSPACE }}/doxygen:$PATH
+          export PATH=$GITHUB_WORKSPACE/doxygen:$PATH
           echo env.HOME: ${{ env.HOME }} # Debugging
           echo $PATH  # Debugging
         env:
